--- a/app/globals.css
+++ b/app/globals.css
@@ -30,7 +30,7 @@
     --popover: 0 0% 100%;
     --popover-foreground: 222.2 84% 4.9%;
 
-    --primary: 222.2 47.4% 11.2%;
+    --primary: 222.9, 6%, 22.9%;
     --primary-foreground: 210 40% 98%;
 
     --secondary: 210 40% 96.1%;
