--- a/app/globals.css
+++ b/app/globals.css
@@ -22,6 +22,13 @@
   font-style: normal;
 }
 
+@font-face {
+  font-family: "SanMarinoBeach";
+  src: url("/assets/fonts/SanMarinoBeach.otf") format("opentype");
+  font-weight: bold;
+  font-style: normal;
+}
+
 .slidedown {
   animation: slideDown 0.3s ease-out forwards;
 }
@@ -100,6 +107,6 @@
     @apply bg-muted;
   }
   h1 {
-    @apply text-[25px] p-0 m-0;
+    @apply p-0 m-0;
   }
 }
