--- a/app/globals.css
+++ b/app/globals.css
@@ -2,16 +2,16 @@
 @tailwind components;
 @tailwind utilities;
 
-@keyframes slideDown {
+@keyframes slideRight {
   from {
     opacity: 0;
-    transform: scaleY(0);
-    transform-origin: top;
+    transform: translate(100%);
+    transform-origin: right;
   }
   to {
     opacity: 1;
-    transform: scaleY(1);
-    transform-origin: top;
+    transform: translate(0%);
+    transform-origin: right;
   }
 }
 
@@ -29,43 +29,29 @@
   font-style: normal;
 }
 
-.slidedown {
-  animation: slideDown 0.3s ease-out forwards;
+
+.slide-right {
+  animation: slideRight 0.3s ease-out forwards;
 }
 
 @layer base {
   :root {
-    --background: 0 0% 100%;
-    --foreground: 222.2 84% 4.9%;
 
-    --card: 0 0% 100%;
-    --card-foreground: 222.2 84% 4.9%;
+    /* Blue */
+    --background: 206.5, 69%, 38.3%;
 
-    --popover: 0 0% 100%;
-    --popover-foreground: 222.2 84% 4.9%;
+    /* White */
+    --foreground: 29.6 2.38% 98.9%;
 
-    --primary: 28.67, 8.06%, 20.06%;
-    --primary-foreground: 210 40% 98%;
+    /* Cream */
+    --cream: 31.6 12.14% 94.05%;
 
-    --secondary: 210 40% 96.1%;
-    --secondary-foreground: 222.2 47.4% 11.2%;
+    /* font */
+    --nomad-text: 28.67, 8.06%, 20.06%;
 
-    --muted: 29.6 2.38% 98.9%;
-    --muted-foreground: 215.4 16.3% 46.9%;
+    --nomad-text-gray: 34.3, 3.6%, 38.6%;
 
-    --retro: 31.6 12.14% 94.05%;
-
-    --accent: 210 40% 96.1%;
-    --accent-foreground: 222.2 47.4% 11.2%;
-
-    --destructive: 0 84.2% 60.2%;
-    --destructive-foreground: 210 40% 98%;
-
-    --border: 214.3 31.8% 91.4%;
-    --input: 214.3 31.8% 91.4%;
-    --ring: 222.2 84% 4.9%;
-
-    --radius: 0.5rem;
+    --border: 34.3, 3.6%, 76.6%;
   }
 
   .dark {
